hphp/test/slow/enum_class/enum_class07.php.expectf
Fatal error: Enum class D cannot extend non-enum class parent B in %s/enum_class/enum_class07.php on line 5
